# cmake-sfml-project

./: CMakeLists.txt
src/: main.cpp
